Used flexbox header + content layout. Fixed z-index for dropdown list

--- a/src/css/autocomplete.less
+++ b/src/css/autocomplete.less
@@ -1,21 +1,34 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+header {
+  height: 75px;
+}
+
+main {
+  flex: auto;
+}
+
 .drop-down-list {
   display: none;
   position: absolute;
+  z-index: 10;
   height: auto;
   max-height: 1000px;
   min-width: 300px;
   border: solid 1px #ccc;
   font-size: 14px;
+  background-color: white;
 
   &.visible {
     display: block;
   }
-
-  /*ul {
-    list-style-type: none;
-    padding: 0;
-    width: 100%;
-  }*/
 
   .flex-wrapper {
     display: flex;
@@ -31,6 +44,7 @@
       width: 200px;
       flex: 0 0 200px;
     }
+
     .flex-wrapper:extend(:nth-child(1)) {}
     .flex-wrapper:extend(:nth-child(2)) {}
   }
@@ -40,9 +54,17 @@
     flex-grow: 1;
     border-right: solid 1px #ccc;
     padding: 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .selected {
     background-color: yellow;
   }
+}
+
+.content {
+  z-index: 1;
+  position: relative;
 }
